<resources>
    <string name="app_name">SimpList3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_icon_description">a simple list icon</string>
    <string name="shopping_cart_description">A simple shopping cart</string>
    <string name="store_icon_description">A simple store icon</string>
    <string name="placeholder_text_items">Item Fragment</string>
    <string name="placeholder_text_store">Store Fragment</string>
    <string name="placeholder_text_shop">Shop Fragment</string>
</resources>